demo user login button alignment fixes

--- a/client/src/app/components/login/login.component.scss
+++ b/client/src/app/components/login/login.component.scss
@@ -27,6 +27,9 @@
     }
     .demo-login-button-wrapper {
         height: 80%;
+        #demo-user-button {
+            margin-bottom: 1rem;
+        }
         button {
             width: 100%;
         }
